--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title:  Welcome to Wayne's homepage!
+description:  Don't bother bookmarking this page because it is maintained by an amateur
